# thesis

./: .gitignore  2021-12-20-pyterrier.odp  2021-12-22-order_of_approach.odp  2022-01-01_week_plan.odp  2022-01-09_kick_off.odp  2022-01-12_error_analysis_sequence.odp  2022-01-12_error_analysis_sequence.pptx  2022-01-17_week_plan.odp  A note on the features for LambdaMART.md  Experiments.md  Outline V1.md  Pairwse LtR (2019).md  Previous approaches Tracks 2019 2020.md  Questions about approach of Malte Bonart.md  README.md  Random shuffle (2019).md  Research Questions & Plan of Action V2.md  approaches.md  build_subcorpus_json.py  comp_script.sh  config.py  e-mail to fair trec participants.md  expeval.sh  make_runfiles.sh  papers with code fairtrec 2020 & 2019.md  predictions-lambdamart-ferraro-test-sequence.csv  requirements-python37.txt  requirements.txt  schedule_thesis_maaike_visser.ods  schedule_thesis_maaike_visser.xlsx  scratch_12.py  scratch_13.py  temp.ipynb  tempname.csv  tempname2.csv  zoom link.md
app/: app_entry.py
code/: .gitignore
code/src/fair-trec-tools/: Cargo.toml  environment.yml
code/src/fair-trec-tools/eval/: data.py  expeval.py
code/src/fair-trec-tools/src/: ai2.rs
code/src/fair-trec-tools/src/subset/: docset.rs  mod.rs
code/src/fair-trec-tools/src/subset/sink/: mod.rs  paper.rs
config/: featurequery_ferraro_lmr.json  features_ferraro_lmr.json
evaluation/: eval_sample_annotated.py  kendall_tau.py  merged_annotations_to_groups.py
fair-trec-2019/: build_subcorpus.py  validate-run.py
fair-trec-2020/: doc_generator.py  (+3 more)
(+7656 files in other folders)
